# agent-app-template

./: .env  app.py  app_factory.py  main.py  migrate.py  pyproject.toml
app/: alembic.ini  app_factory.py  migrate.py  test.db
app/api/v1/: auth.py
app/configs/: app_config.py
app/configs/middlewares/: __init__.py
app/migrations/: env.py  script.py.mako
app/migrations/versions/: 1dd77dbf3528_init.py  25ecec6e65ad_init3.py  41562a8f9922_init6.py  41f30f5a4257_init3.py  a14d083c4783_init5.py  ebca56f11f64_init2.py  f3b5fc903b8b_init4.py
app/models/: __init__.py  account.py  base.py  test.py
app/services/: auth_service.py  base_service.py
app/utils/: auth.py
configs/: __init__.py  app_config.py
configs/middleware/: __init__.py
controllers/: __init__.py  test_router.py
controllers/v1/: __init__.py  auth.py  chatbot.py
core/agent/: graph_agent_base.py  normal_agent.py
extensions/: ext_database.py  ext_logging.py
models/: account.py  base.py  session.py
schemas/: chat.py
