[project]
name = "fastlan-tem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.1",
    "click>=8.2.1",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "pydantic-settings>=2.9.1",
    "sqlmodel>=0.0.24",
]
