[project]
name = "fastlan-tem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.13",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.0",
    "langgraph-checkpoint-postgres>=2.0.21",
    "psycopg-pool>=3.2.6",
    "pydantic-settings>=2.10.0",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.3",
]
